tests/lean/over_notation.lean.expected.out
f 0 1 : nat
g "a" "b" : string
over_notation.lean:11:9: error: none of the overloads are applicable
error for g
type mismatch at application
  g tt
term
  tt
has type
  bool
but is expected to have type
  string

error for f
type mismatch at application
  f tt
term
  tt
has type
  bool
but is expected to have type
  nat
f 1 (f 2 (f 3 0)) : nat
g "a" (g "b" (g "c" "")) : string
